--- a/app/src/main/res/layout-land/tablet.xml
+++ b/app/src/main/res/layout-land/tablet.xml
@@ -41,7 +41,7 @@
         app:layout_constraintGuide_percent="0.8" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imImagerigth"
         android:layout_width="257dp"
         android:layout_height="157dp"
         android:layout_marginTop="36dp"
@@ -52,7 +52,7 @@
         app:srcCompat="@drawable/im_docs" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/imImageleft"
         android:layout_width="248dp"
         android:layout_height="152dp"
         android:layout_marginTop="36dp"
