Second commit - changes in layout for tablet/activ

--- a/app/src/main/res/layout-land/tablet.xml
+++ b/app/src/main/res/layout-land/tablet.xml
@@ -20,18 +20,18 @@
         app:layout_constraintGuide_percent="0.8" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline6"
+        android:id="@+id/guidelineMiddle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.5" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineTop"
+        android:id="@+id/guidelieTop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.2" />
+        app:layout_constraintGuide_begin="120dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineDown"
@@ -44,22 +44,24 @@
         android:id="@+id/imImagerigth"
         android:layout_width="257dp"
         android:layout_height="157dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         app:layout_constraintEnd_toStartOf="@+id/guideline6"
         app:layout_constraintHorizontal_bias="0.483"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toTopOf="@+id/guideline7"
+        app:layout_constraintTop_toTopOf="@+id/guidelieTop"
         app:srcCompat="@drawable/im_docs" />
 
     <ImageView
         android:id="@+id/imImageleftZ"
         android:layout_width="248dp"
         android:layout_height="152dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginRight="28dp"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintHorizontal_bias="0.55"
         app:layout_constraintStart_toStartOf="@+id/guideline6"
-        app:layout_constraintTop_toTopOf="@+id/guideline7"
+        app:layout_constraintTop_toTopOf="@+id/guidelieTop"
         app:srcCompat="@drawable/im_notes" />
 
     <Button
@@ -102,6 +104,7 @@
         app:layout_constraintStart_toStartOf="@+id/imageView2" />
 
     <LinearLayout
+        android:id="@+id/rightLinearLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -111,13 +114,13 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imageView7"
+            android:id="@+id/firstImageLV"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             app:srcCompat="@drawable/im_teardown" />
 
         <ImageView
-            android:id="@+id/imageView9"
+            android:id="@+id/secondImageLV"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             app:srcCompat="@drawable/im_teardown" />
@@ -137,6 +140,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/leftLinearLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -145,7 +149,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imageView12"
+            android:id="@+id/firstImageLVLeft"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             app:srcCompat="@drawable/im_cart" />
