--- a/app/src/main/res/layout-land/tablet.xml
+++ b/app/src/main/res/layout-land/tablet.xml
@@ -132,7 +132,7 @@
             app:srcCompat="@drawable/im_teardown" />
 
         <ImageView
-            android:id="@+id/imageView11"
+            android:id="@+id/imgFinal"
             android:layout_width="match_parent"
             android:layout_height="101dp"
             app:srcCompat="@drawable/im_teardown" />
@@ -149,7 +149,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/firstImageLVLeft"
+            android:id="@+id/firstImgLVLeft"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             app:srcCompat="@drawable/im_cart" />
